adds question data and people view controller

--- a/Datr/Datr/Base.lproj/Main.storyboard
+++ b/Datr/Datr/Base.lproj/Main.storyboard
@@ -14,30 +14,86 @@
                     <view key="view" contentMode="scaleToFill" id="sVX-Tb-w9E">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="eQx-av-ccU"/>
                     </view>
                     <tabBarItem key="tabBarItem" title="Item 2" id="esp-Sb-ayx"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="I38-Mu-llj" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="238" y="191"/>
+            <point key="canvasLocation" x="145" y="-133"/>
+        </scene>
+        <!--Item-->
+        <scene sceneID="xnY-Ux-Gyp">
+            <objects>
+                <viewController id="e5J-35-qVh" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="IdW-qF-U3M">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="Fch-ze-7fq"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Item" id="j0u-wr-PD7"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="UdM-Mf-2sz" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="145" y="557"/>
         </scene>
         <!--Item 1-->
         <scene sceneID="RVL-89-f3f">
             <objects>
-                <viewController id="ZbF-SV-QR4" sceneMemberID="viewController">
+                <viewController id="ZbF-SV-QR4" customClass="PeopleViewController" customModule="Datr" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Pha-Qr-a7y">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="E6x-kk-VgJ">
+                                <rect key="frame" x="41.5" y="115" width="331" height="627"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="70" id="T1x-sg-tK4">
+                                        <rect key="frame" x="0.0" y="28" width="331" height="70"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="T1x-sg-tK4" id="RLB-nx-EcT">
+                                            <rect key="frame" x="0.0" y="0.0" width="331" height="70"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="a4H-Oa-XXm">
+                                                    <rect key="frame" x="0.0" y="0.0" width="331" height="70"/>
+                                                    <fontDescription key="fontDescription" name="Verdana-Bold" family="Verdana" pointSize="18"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="a4H-Oa-XXm" firstAttribute="width" secondItem="RLB-nx-EcT" secondAttribute="width" id="Rgw-vu-c7c"/>
+                                                <constraint firstItem="a4H-Oa-XXm" firstAttribute="centerX" secondItem="RLB-nx-EcT" secondAttribute="centerX" id="USB-pd-Hxm"/>
+                                                <constraint firstItem="a4H-Oa-XXm" firstAttribute="centerY" secondItem="RLB-nx-EcT" secondAttribute="centerY" id="wSa-QE-0Nz"/>
+                                                <constraint firstItem="a4H-Oa-XXm" firstAttribute="height" secondItem="RLB-nx-EcT" secondAttribute="height" id="ziq-7u-2eR"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="ZbF-SV-QR4" id="bTs-22-8gX"/>
+                                    <outlet property="delegate" destination="ZbF-SV-QR4" id="iNu-kX-Tcz"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="E6x-kk-VgJ" firstAttribute="centerX" secondItem="BPA-2q-9x8" secondAttribute="centerX" id="0PT-uB-cXD"/>
+                            <constraint firstItem="E6x-kk-VgJ" firstAttribute="width" secondItem="Pha-Qr-a7y" secondAttribute="width" multiplier="0.8" id="VIK-w0-lTj"/>
+                            <constraint firstItem="E6x-kk-VgJ" firstAttribute="height" secondItem="Pha-Qr-a7y" secondAttribute="height" multiplier="0.7" id="all-9n-tek"/>
+                            <constraint firstItem="E6x-kk-VgJ" firstAttribute="centerY" secondItem="BPA-2q-9x8" secondAttribute="centerY" id="lfk-4C-Aub"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="BPA-2q-9x8"/>
                     </view>
                     <tabBarItem key="tabBarItem" title="Item 1" id="QeB-u2-Wm5"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="25G-Dl-h9B" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="238" y="-457"/>
+            <point key="canvasLocation" x="144.92753623188406" y="-827.00892857142856"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="2RX-KJ-3Bj">
@@ -47,10 +103,12 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="49"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="barTintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBar>
                     <connections>
                         <segue destination="ZbF-SV-QR4" kind="relationship" relationship="viewControllers" id="XaE-tc-j5h"/>
                         <segue destination="OyX-wt-98A" kind="relationship" relationship="viewControllers" id="IbV-I7-lZf"/>
+                        <segue destination="e5J-35-qVh" kind="relationship" relationship="viewControllers" id="Qe7-Xo-yIf"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ssd-SG-U9N" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
