--- a/Datr/Datr/Base.lproj/Main.storyboard
+++ b/Datr/Datr/Base.lproj/Main.storyboard
@@ -7,7 +7,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Item 2-->
+        <!--View Controller-->
         <scene sceneID="lW1-dL-Jam">
             <objects>
                 <viewController id="OyX-wt-98A" sceneMemberID="viewController">
@@ -17,13 +17,13 @@
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="eQx-av-ccU"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Item 2" id="esp-Sb-ayx"/>
+                    <navigationItem key="navigationItem" id="fR2-sh-0ud"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="I38-Mu-llj" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="145" y="-133"/>
+            <point key="canvasLocation" x="1055.072463768116" y="-133.25892857142856"/>
         </scene>
-        <!--Item-->
+        <!--View Controller-->
         <scene sceneID="xnY-Ux-Gyp">
             <objects>
                 <viewController id="e5J-35-qVh" sceneMemberID="viewController">
@@ -33,13 +33,13 @@
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="Fch-ze-7fq"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Item" id="j0u-wr-PD7"/>
+                    <navigationItem key="navigationItem" id="JVz-kk-ZK4"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="UdM-Mf-2sz" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="145" y="557"/>
+            <point key="canvasLocation" x="1055.072463768116" y="556.47321428571422"/>
         </scene>
-        <!--Item 1-->
+        <!--People View Controller-->
         <scene sceneID="RVL-89-f3f">
             <objects>
                 <viewController id="ZbF-SV-QR4" customClass="PeopleViewController" customModule="Datr" customModuleProvider="target" sceneMemberID="viewController">
@@ -47,53 +47,38 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="E6x-kk-VgJ">
-                                <rect key="frame" x="41.5" y="115" width="331" height="627"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                                <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="70" id="T1x-sg-tK4">
-                                        <rect key="frame" x="0.0" y="28" width="331" height="70"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="T1x-sg-tK4" id="RLB-nx-EcT">
-                                            <rect key="frame" x="0.0" y="0.0" width="331" height="70"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                            <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="a4H-Oa-XXm">
-                                                    <rect key="frame" x="0.0" y="0.0" width="331" height="70"/>
-                                                    <fontDescription key="fontDescription" name="Verdana-Bold" family="Verdana" pointSize="18"/>
-                                                    <nil key="textColor"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                            </subviews>
-                                            <constraints>
-                                                <constraint firstItem="a4H-Oa-XXm" firstAttribute="width" secondItem="RLB-nx-EcT" secondAttribute="width" id="Rgw-vu-c7c"/>
-                                                <constraint firstItem="a4H-Oa-XXm" firstAttribute="centerX" secondItem="RLB-nx-EcT" secondAttribute="centerX" id="USB-pd-Hxm"/>
-                                                <constraint firstItem="a4H-Oa-XXm" firstAttribute="centerY" secondItem="RLB-nx-EcT" secondAttribute="centerY" id="wSa-QE-0Nz"/>
-                                                <constraint firstItem="a4H-Oa-XXm" firstAttribute="height" secondItem="RLB-nx-EcT" secondAttribute="height" id="ziq-7u-2eR"/>
-                                            </constraints>
-                                        </tableViewCellContentView>
-                                    </tableViewCell>
-                                </prototypes>
-                                <connections>
-                                    <outlet property="dataSource" destination="ZbF-SV-QR4" id="bTs-22-8gX"/>
-                                    <outlet property="delegate" destination="ZbF-SV-QR4" id="iNu-kX-Tcz"/>
-                                </connections>
-                            </tableView>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="uXJ-X8-kOC">
+                                <rect key="frame" x="41.5" y="278" width="331" height="435"/>
+                                <color key="backgroundColor" systemColor="tertiarySystemGroupedBackgroundColor" red="0.94901960780000005" green="0.94901960780000005" blue="0.96862745100000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <string key="text">THis just in I was at the store when a girl approached me and said that she really liked me and she wanted to go out with me,, but I was like naw girl, I amd a married man. lol Hell yaeh</string>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="0.79518942640000001" colorSpace="custom" customColorSpace="sRGB"/>
+                                <fontDescription key="fontDescription" name="Verdana-Bold" family="Verdana" pointSize="22"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Blake - Adventurous And Awesome" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2ZT-VN-xjn">
+                                <rect key="frame" x="41.5" y="193" width="331" height="61"/>
+                                <fontDescription key="fontDescription" name="Verdana-Bold" family="Verdana" pointSize="25"/>
+                                <color key="textColor" systemColor="tertiarySystemGroupedBackgroundColor" red="0.94901960780000005" green="0.94901960780000005" blue="0.96862745100000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="E6x-kk-VgJ" firstAttribute="centerX" secondItem="BPA-2q-9x8" secondAttribute="centerX" id="0PT-uB-cXD"/>
-                            <constraint firstItem="E6x-kk-VgJ" firstAttribute="width" secondItem="Pha-Qr-a7y" secondAttribute="width" multiplier="0.8" id="VIK-w0-lTj"/>
-                            <constraint firstItem="E6x-kk-VgJ" firstAttribute="height" secondItem="Pha-Qr-a7y" secondAttribute="height" multiplier="0.7" id="all-9n-tek"/>
-                            <constraint firstItem="E6x-kk-VgJ" firstAttribute="centerY" secondItem="BPA-2q-9x8" secondAttribute="centerY" id="lfk-4C-Aub"/>
+                            <constraint firstItem="uXJ-X8-kOC" firstAttribute="centerX" secondItem="BPA-2q-9x8" secondAttribute="centerX" id="1t8-bt-XUA"/>
+                            <constraint firstItem="uXJ-X8-kOC" firstAttribute="centerY" secondItem="BPA-2q-9x8" secondAttribute="centerY" multiplier="1.1" id="5Xz-xV-7FW"/>
+                            <constraint firstItem="uXJ-X8-kOC" firstAttribute="width" secondItem="BPA-2q-9x8" secondAttribute="width" multiplier="0.8" id="CTy-yN-hPv"/>
+                            <constraint firstItem="2ZT-VN-xjn" firstAttribute="centerX" secondItem="uXJ-X8-kOC" secondAttribute="centerX" id="LxB-ze-3K8"/>
+                            <constraint firstItem="uXJ-X8-kOC" firstAttribute="top" secondItem="2ZT-VN-xjn" secondAttribute="bottom" constant="24" id="YkQ-gp-n05"/>
+                            <constraint firstItem="uXJ-X8-kOC" firstAttribute="height" secondItem="BPA-2q-9x8" secondAttribute="height" multiplier="0.6" id="m4M-IG-aIk"/>
+                            <constraint firstItem="2ZT-VN-xjn" firstAttribute="width" secondItem="BPA-2q-9x8" secondAttribute="width" multiplier="0.8" id="yMn-SB-Mbm"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="BPA-2q-9x8"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Item 1" id="QeB-u2-Wm5"/>
+                    <navigationItem key="navigationItem" id="ZCt-9e-XrV"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="25G-Dl-h9B" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="144.92753623188406" y="-827.00892857142856"/>
+            <point key="canvasLocation" x="1055.072463768116" y="-827.00892857142856"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="2RX-KJ-3Bj">
@@ -106,14 +91,74 @@
                         <color key="barTintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBar>
                     <connections>
-                        <segue destination="ZbF-SV-QR4" kind="relationship" relationship="viewControllers" id="XaE-tc-j5h"/>
-                        <segue destination="OyX-wt-98A" kind="relationship" relationship="viewControllers" id="IbV-I7-lZf"/>
-                        <segue destination="e5J-35-qVh" kind="relationship" relationship="viewControllers" id="Qe7-Xo-yIf"/>
+                        <segue destination="6KS-kr-Ob9" kind="relationship" relationship="viewControllers" id="XaE-tc-j5h"/>
+                        <segue destination="kuj-sQ-ulh" kind="relationship" relationship="viewControllers" id="IbV-I7-lZf"/>
+                        <segue destination="Zt3-fv-db4" kind="relationship" relationship="viewControllers" id="Qe7-Xo-yIf"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ssd-SG-U9N" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-682" y="-132"/>
+        </scene>
+        <!--Item 1-->
+        <scene sceneID="bNh-OG-qG7">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="6KS-kr-Ob9" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item 1" id="QeB-u2-Wm5"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="zev-Db-5Uw">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="barTintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="ZbF-SV-QR4" kind="relationship" relationship="rootViewController" id="XZu-4l-gGR"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="f79-jP-dal" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="144.92753623188406" y="-827.00892857142856"/>
+        </scene>
+        <!--Item 2-->
+        <scene sceneID="uO1-ju-aWJ">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="kuj-sQ-ulh" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item 2" id="esp-Sb-ayx"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="M9C-pv-ssf">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="barTintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="OyX-wt-98A" kind="relationship" relationship="rootViewController" id="Ysx-2D-v5F"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="woI-b7-9Nz" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="144.92753623188406" y="-133.25892857142856"/>
+        </scene>
+        <!--Item-->
+        <scene sceneID="LhB-iC-T1t">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Zt3-fv-db4" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="j0u-wr-PD7"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="w6W-eH-qpF">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="barTintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="e5J-35-qVh" kind="relationship" relationship="rootViewController" id="bfj-rE-n8e"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="RdM-CL-VNe" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="144.92753623188406" y="556.47321428571422"/>
         </scene>
     </scenes>
 </document>
